fix: increase spinner border size in home.css; enable spinner visibility in mfgApp.js

--- a/css/home.css
+++ b/css/home.css
@@ -19,6 +19,7 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box;  box-sizing:
 .draggable {
   -webkit-app-region: drag;
 }
+
 .spinner {
   position: fixed;
   top: 50%;
@@ -26,8 +27,8 @@ html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box;  box-sizing:
   width: 89px;
   height: 89px;
   margin: -25px 0 0 -25px;
-  border: 5px solid rgba(0, 0, 0, 0.1);
-  border-top: 5px solid #0071c5;
+  border: 10px solid rgba(0, 0, 0, 0.1);
+  border-top: 10px solid #0071c5;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
